# traimarch-assistant-rs

./: .gitignore  Cargo.toml
migrations/2023-04-30-220847_v1/: down.sql  up.sql
migrations/2023-05-02-203716_command_mode/: down.sql  up.sql
src/: config.rs  main.rs  models.rs  schema.rs
src/commands/: mod.rs  ping.rs  rewards.rs  timestamp.rs
