[package]
name = "trainmarch-assistant-rs"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.51.0"
anyhow = "1.0.70"
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-serenity = "0.51.0"
tracing = "0.1.37"
diesel = { version = "2.0.4", features = ["postgres"]}
poise = "0.6.1"
chrono = "0.4.39"
chrono-tz = "0.10.0"
rand = { version = "0.8.5", features = [] }
